Clean API keys from all Python and Jupyter notebook files
- Replace hardcoded API keys with environment variable references
- Add centralized config.py for API key management
- Update .env.example with all required environment variables
- Clean both source code and notebook outputs
- All files now use config.ANTHROPIC_API_KEY and config.OPENAI_API_KEY
- Files are now safe to commit without exposing secrets

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,26 @@
-# API Keys (required for LLM features)
-OPENAI_API_KEY=your_openai_api_key_here
+# Environment variables for MMS Extractor
+# Copy this file to .env and fill in your actual values
+
+# API Keys (Required)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
-HUGGINGFACE_API_KEY=your_huggingface_token_here
+OPENAI_API_KEY=your_openai_api_key_here
+HUGGINGFACE_TOKEN=your_huggingface_token_here
 
-# Model configuration
-MODEL_LOADING_MODE=auto
-LOCAL_EMBEDDING_MODEL_PATH=./models/ko-sbert-nli
+# Model Configuration
+DEFAULT_MODEL=claude-3-sonnet-20240229
+OPENAI_MODEL=gpt-4
 
-# API configuration
-FLASK_ENV=production
-API_PORT=8080
-DEBUG=false
+# Paths
+DATA_PATH=./data
+MODEL_PATH=./models
 
-# Optional: Custom model paths
-# CUSTOM_MODEL_PATH=/path/to/your/model
-# CUSTOM_DATA_PATH=/path/to/your/data
+# Model Parameters
+MAX_TOKENS=4000
+TEMPERATURE=0.1
+
+# Database (if using)
+DATABASE_URL=sqlite:///mms_extractor.db
+
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE=logs/mms_extractor.log
