--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,8 @@
-# Environment variables for MMS Extractor
-# Copy this file to .env and fill in your actual values
-
-# API Keys (Required)
+# API Keys - Replace with your actual API keys
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
+CUSTOM_API_KEY=your_custom_api_key_here
 HUGGINGFACE_TOKEN=your_huggingface_token_here
 
-# Model Configuration
-DEFAULT_MODEL=claude-3-sonnet-20240229
-OPENAI_MODEL=gpt-4
-
-# Paths
-DATA_PATH=./data
-MODEL_PATH=./models
-
-# Model Parameters
-MAX_TOKENS=4000
-TEMPERATURE=0.1
-
-# Database (if using)
-DATABASE_URL=sqlite:///mms_extractor.db
-
-# Logging
-LOG_LEVEL=INFO
-LOG_FILE=logs/mms_extractor.log
+# Optional: Custom OpenAI API Key for specific use cases
+CUSTOM_OPENAI_API_KEY=your_custom_openai_api_key_here
