--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ flask-cors>=4.0.0
 # HTTP client
 httpx>=0.25.0
 
+# Web crawling
+playwright>=1.40.0
+
 # Utilities
 python-dotenv>=1.0.0
 pydantic>=2.0.0
